@@ -77,7 +77,7 @@ compilation:
 The following are not strictly required but highly recommended:
   swig 1.3.28 or greater
   tcl-8.4.9-devel or greater
-  tk-8.4.9-devel or greater
+  tk-8.4.9 or greater
   glib2-2.0
   gtk2-2.8
   libglade2
